recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var tableau:Array[Int]
    ^butLast:7: error: type mismatch;
 found   : Array[Int]
 required: List[Int]
return tableau
       ^